chore(ch1): Add pair-wise distance, clustering section

--- a/notebooks/foundation_model.ipynb
+++ b/notebooks/foundation_model.ipynb
@@ -4,22 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part I: Basic Bioinformatics\n",
-    "- Theory: Sequence Distance (20 min)\n",
-    "- Practice: Phylogenetic Tree Construction (30 min)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Edit Distance: Hamming Distance\n",
-    "- Edit distance is basic concepts to "
+    "# Part II: Foundation Model\n",
+    "## Theory: Basis of Foundation Model - BERT\n",
+    "- Practice: Compute Embedding Vectors from Biological Sequence using ESM C (30 min)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -27,41 +19,20 @@
    },
    "outputs": [],
    "source": [
-    "from textdistance import hamming"
+    "from esm.models.emsc import ESMC\n",
+    "from esm.sdk.api import ESMProtein, LogitsConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hamming('test', 'text')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part II: Foundation Model\n",
-    "- Theory: Basis of Foundation Model - BERT (20 min)\n",
-    "- Practice: Compute Embedding Vectors from Biological Sequence using ESM C (30 min)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
