chore: resolve dependencies

--- a/notebooks/foundation_model.ipynb
+++ b/notebooks/foundation_model.ipynb
@@ -11,28 +11,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ForwardTrackData(sequence=tensor([[[-38.0487, -38.0396, -38.0528,  12.6376,  21.6359,  22.2980,  22.0005,\n",
+      "           21.8309,  21.4193,  21.6341,  21.7211,  21.2691,  20.7627,  21.4259,\n",
+      "           21.8944,  20.8949,  20.7578,  20.2706,  20.3550,  20.1929,  21.7965,\n",
+      "           19.8551,  19.8331,  19.3225,  18.3923,   1.3238,  -1.4432,  -3.8396,\n",
+      "          -20.7008, -38.1628, -38.0670, -38.0313, -38.0440, -38.1152, -38.0858,\n",
+      "          -38.0803, -38.0754, -38.0204, -38.0583, -38.0084, -38.1001, -38.0640,\n",
+      "          -38.0523, -38.0526, -38.0688, -38.1322, -38.0856, -38.0501, -38.1262,\n",
+      "          -38.1205, -38.0645, -38.0817, -38.0436, -38.1206, -38.1392, -38.0430,\n",
+      "          -38.0646, -38.0460, -38.0740, -38.1045, -38.0883, -38.0591, -38.0907,\n",
+      "          -38.0756],\n",
+      "         [-40.0131, -40.0105, -40.0687,   5.3847,  20.0792,  19.9053,  18.6875,\n",
+      "           20.5655,  18.7561,  18.2883,  18.5896,  18.4681,  18.1802,  17.9652,\n",
+      "           18.6805,  17.7337,  17.3822,  17.0970,  17.6945,  16.8263,  22.0431,\n",
+      "           17.1488,  16.4926,  16.7747,  11.6440,  -2.2917,  -3.3322,  -5.1721,\n",
+      "          -25.3672, -40.1171, -40.0434, -40.0224, -40.0300, -40.0542, -40.0596,\n",
+      "          -40.0460, -40.0583, -40.0017, -40.0532, -39.9614, -40.0311, -39.9757,\n",
+      "          -40.0624, -40.0118, -40.0554, -40.0935, -40.0835, -39.9840, -40.0864,\n",
+      "          -40.0705, -40.0809, -40.0305, -40.0240, -40.0783, -40.0988, -39.9968,\n",
+      "          -40.0318, -40.0161, -40.0494, -39.9915, -40.0532, -40.0690, -40.0437,\n",
+      "          -40.0478],\n",
+      "         [-36.1433, -36.1190, -36.1505,  13.2670,  27.2614,  28.0800,  26.9205,\n",
+      "           27.1417,  26.7293,  26.7462,  26.8025,  26.6960,  26.3872,  26.2165,\n",
+      "           26.5841,  26.2262,  25.7104,  25.3863,  25.8482,  25.1511,  25.7060,\n",
+      "           25.3261,  24.8470,  24.9930,  17.7031,  -4.1166,  -3.7959,  -7.0671,\n",
+      "          -19.0297, -36.2450, -36.1743, -36.1313, -36.1878, -36.2298, -36.1875,\n",
+      "          -36.2083, -36.2207, -36.1159, -36.1347, -36.1201, -36.1578, -36.1767,\n",
+      "          -36.2123, -36.1434, -36.1853, -36.1813, -36.2448, -36.1526, -36.2192,\n",
+      "          -36.2356, -36.2044, -36.1680, -36.1525, -36.2401, -36.2303, -36.1634,\n",
+      "          -36.1702, -36.1850, -36.1955, -36.1846, -36.1784, -36.2211, -36.2072,\n",
+      "          -36.1873],\n",
+      "         [-36.5860, -36.5680, -36.6025,  12.8644,  27.1102,  28.0337,  26.7569,\n",
+      "           27.1363,  26.6160,  26.5521,  26.5885,  26.5191,  26.2697,  26.0389,\n",
+      "           26.4664,  25.9622,  25.5125,  25.1599,  25.6709,  24.9120,  25.5681,\n",
+      "           25.1618,  24.6330,  24.8289,  17.4273,  -4.1198,  -4.4982,  -7.5000,\n",
+      "          -19.4827, -36.6921, -36.6232, -36.5800, -36.6374, -36.6793, -36.6386,\n",
+      "          -36.6581, -36.6728, -36.5667, -36.5789, -36.5702, -36.6096, -36.6295,\n",
+      "          -36.6648, -36.5919, -36.6356, -36.6294, -36.6879, -36.5998, -36.6653,\n",
+      "          -36.6851, -36.6532, -36.6191, -36.6001, -36.6869, -36.6771, -36.6127,\n",
+      "          -36.6188, -36.6354, -36.6466, -36.6323, -36.6226, -36.6691, -36.6532,\n",
+      "          -36.6382],\n",
+      "         [-37.0624, -37.0343, -37.0768,  13.4195,  27.0647,  28.0939,  26.8469,\n",
+      "           26.9836,  26.7634,  26.4819,  26.7471,  26.6525,  26.2017,  26.0375,\n",
+      "           26.5488,  26.0693,  25.7239,  25.2767,  25.7089,  24.9932,  25.4773,\n",
+      "           25.3599,  24.6853,  24.9979,  17.3979,  -4.2731,  -3.6525,  -7.7747,\n",
+      "          -20.2162, -37.1539, -37.0936, -37.0523, -37.1126, -37.1380, -37.1085,\n",
+      "          -37.1332, -37.1466, -37.0366, -37.0446, -37.0356, -37.0850, -37.0993,\n",
+      "          -37.1343, -37.0644, -37.1041, -37.1016, -37.1593, -37.0729, -37.1292,\n",
+      "          -37.1558, -37.1292, -37.0863, -37.0665, -37.1575, -37.1545, -37.0830,\n",
+      "          -37.0877, -37.1099, -37.1180, -37.1051, -37.0956, -37.1419, -37.1299,\n",
+      "          -37.1104],\n",
+      "         [-33.5798, -33.5753, -33.5824,  25.5369,  23.7427,  24.7690,  23.9168,\n",
+      "           23.7164,  23.6869,  23.2354,  23.9155,  23.3608,  22.7746,  22.8113,\n",
+      "           23.3394,  22.7863,  22.4400,  22.0453,  22.3641,  21.5228,  21.9267,\n",
+      "           21.9904,  22.0096,  21.9930,  17.7671,   4.2874,   4.8660,   1.9466,\n",
+      "          -21.2202, -33.6813, -33.6164, -33.5821, -33.5998, -33.6389, -33.6356,\n",
+      "          -33.6130, -33.6315, -33.5495, -33.5547, -33.5547, -33.6063, -33.5891,\n",
+      "          -33.6130, -33.5666, -33.6105, -33.6271, -33.6521, -33.5927, -33.6299,\n",
+      "          -33.6700, -33.6435, -33.5972, -33.5997, -33.6507, -33.6349, -33.6019,\n",
+      "          -33.5974, -33.6087, -33.6192, -33.6290, -33.6197, -33.6222, -33.6423,\n",
+      "          -33.6128],\n",
+      "         [-32.9298, -32.9026, -32.9322,  24.7397,  22.6947,  24.4045,  23.1264,\n",
+      "           22.8465,  23.0661,  22.4907,  23.1813,  22.7552,  21.7119,  22.1715,\n",
+      "           23.1030,  22.1642,  21.9354,  21.4349,  21.3384,  20.7355,  21.1628,\n",
+      "           21.2113,  20.7172,  21.0710,  19.8884,   5.5026,   5.1624,   2.7933,\n",
+      "          -20.1932, -33.0293, -32.9460, -32.9200, -32.9359, -32.9653, -32.9530,\n",
+      "          -32.9569, -32.9551, -32.9034, -32.9095, -32.8817, -32.9684, -32.9445,\n",
+      "          -32.9394, -32.9282, -32.9539, -32.9830, -32.9832, -32.9391, -33.0015,\n",
+      "          -33.0098, -32.9498, -32.9497, -32.9532, -32.9931, -32.9709, -32.9454,\n",
+      "          -32.9537, -32.9554, -32.9615, -32.9778, -32.9641, -32.9482, -32.9679,\n",
+      "          -32.9472]]]), structure=None, secondary_structure=None, sasa=None, function=None) tensor([[[ 0.0092, -0.0086,  0.0036,  ...,  0.0176,  0.0098, -0.0062],\n",
+      "         [ 0.0050, -0.0245,  0.0274,  ...,  0.0576,  0.0276,  0.0108],\n",
+      "         [ 0.0133, -0.0458, -0.0079,  ...,  0.0456,  0.0126, -0.0083],\n",
+      "         ...,\n",
+      "         [ 0.0090, -0.0462, -0.0152,  ...,  0.0343,  0.0057,  0.0026],\n",
+      "         [ 0.0215, -0.0351, -0.0201,  ...,  0.0160,  0.0005, -0.0042],\n",
+      "         [-0.0028, -0.0212, -0.0200,  ..., -0.0040, -0.0011, -0.0181]]])\n"
+     ]
+    }
+   ],
    "source": [
-    "from esm.models.emsc import ESMC\n",
-    "from esm.sdk.api import ESMProtein, LogitsConfig"
+    "from esm.models.esmc import ESMC\n",
+    "from esm.sdk.api import ESMProtein, LogitsConfig\n",
+    "\n",
+    "protein = ESMProtein(sequence=\"AAAAA\")\n",
+    "client = ESMC.from_pretrained(\"esmc_300m\").to(\"cpu\")\n",
+    "protein_tensor = client.encode(protein)\n",
+    "logits_output = client.logits(\n",
+    "   protein_tensor, LogitsConfig(sequence=True, return_embeddings=True)\n",
+    ")\n",
+    "print(logits_output.logits, logits_output.embeddings)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
